crates/stc_ts_file_analyzer/tests/pass/variance/covariance/1.ts
let arrayStringOrNumber: Array<string | number> = [];
let arrayString: Array<string> = [];

arrayStringOrNumber = arrayString; // Ok

export { }