crates/stc_ts_file_analyzer/tests/errors/custom/types/1.ts
type T02 = { [P in Date]: number }; // Error
